@@ -1,3 +1,4 @@
+	* expose file_granularity flag to python bindings
 	* fix DHT memory error
 	* change semantics of storage allocation to allocate on first write rather
 	  than on startup (behaves better with changing file priorities)
